refactored the aivector class def

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,15 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(ai-vector LANGUAGES CXX)
+project(aivector LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(ai-vector main.cpp)
+add_executable(aivector main.cpp
+          vector.hpp)
 
 include(GNUInstallDirs)
-install(TARGETS ai-vector
+install(TARGETS aivector
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
