--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,10 +10,10 @@ on:
 defaults:
   run:
     shell: bash
-    working-directory: build
+    working-directory: ./build
 
 jobs:
   tests_job:
     runs-on: ubuntu-latest
     steps:
-    - run: cmake --h
+    - run: echo "hello"
