--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,5 +16,9 @@ jobs:
   tests_job:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - run: echo "hello"
+    - name: Setup cmake
+    - uses: jwlawson/actions-setup-cmake@v2
+    - with:
+        cmake-version: '3.16.x'
+    - name: Use cmake
+      run: cmake --version
