--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,4 +21,5 @@ jobs:
     - with:
         cmake-version: '3.16.x'
     - name: Use cmake
+    - uses: actions/checkout@v4
     - run: cmake --version
