--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,11 +16,5 @@ jobs:
   tests_job:
     runs-on: ubuntu-latest
     steps:
-    - name: Setup cmake
-      uses: jwlawson/actions-setup-cmake@v2
-      with:
-        cmake-version: '3.16.x'
-# 
-    # - name: Use cmake
-      # uses: actions/checkout@v4
-      run: cmake --version
+    - uses: actions/checkout@v4
+    - run: echo "hello"
