--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,5 +22,5 @@ jobs:
         cmake-version: '3.16.x'
 # 
     # - name: Use cmake
-      # uses: actions/checkout@v4
+      uses: actions/checkout@v4
     - run: cmake --version
