--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
       uses: jwlawson/actions-setup-cmake@v2
       with:
         cmake-version: '3.16.x'
-# 
+#
     # - name: Use cmake
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
     - run: cmake --version
