--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         cmake-version: '3.16.x'
     - name: Use cmake
+      uses: actions/checkout@v4
     - run: cmake --version
     # - uses: actions/checkout@v4
     # - run: cmake --version
