--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,6 @@ jobs:
         cmake-version: '3.16.x'
     - name: Use cmake
       uses: actions/checkout@v4
-    - run: cmake --version
+      run: cmake --version
     # - uses: actions/checkout@v4
     # - run: cmake --version
