--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,5 +24,9 @@ jobs:
       uses: actions/checkout@v4
     - name: Run cmake
       run: cmake --version
+      run: echo hello
+      run: echo come on
+
+
     # - uses: actions/checkout@v4
     # - run: cmake --version
