--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,9 @@ jobs:
       uses: actions/checkout@v4
     - name: Run cmake
       run: cmake --version
+    - name: Run cmake2
       run: echo hello
+    - name: Run cmake3
       run: echo come on
 
 
