--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,8 +20,8 @@ jobs:
       uses: jwlawson/actions-setup-cmake@v2
       with:
         cmake-version: '3.16.x'
-    - name: Use cmake
-      uses: actions/checkout@v4
+    # - name: Use cmake
+    #   uses: actions/checkout@v4
     - name: Run cmake
       run: cmake --version
     - name: Run cmake2
