--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,3 @@
-# This workflow Runs the testers for our code before merging into main
 
 name: Unit/Module Tests for aivector Class
 
@@ -21,6 +20,5 @@ jobs:
       uses: jwlawson/actions-setup-cmake@v2
       with:
         cmake-version: '3.16.x'
-    - name: Run cmake
-      run: cmake --version
-      
+    - uses: actions/checkout@v4
+    - run: cmake --version
