--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,5 +20,6 @@ jobs:
       uses: jwlawson/actions-setup-cmake@v2
       with:
         cmake-version: '3.16.x'
-    - uses: actions/checkout@v4
-    - run: cmake --version
+    - name: Run cmake
+    # - uses: actions/checkout@v4
+      run: cmake --version
