--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,10 +7,10 @@ on:
   pull_request:
     branches: ["main"]
 
-defaults:
-  run:
-    shell: bash
-    working-directory: ./build
+# defaults:
+#   run:
+#     shell: bash
+#     working-directory: ./build
 
 jobs:
   tests_job:
@@ -21,4 +21,6 @@ jobs:
       with:
         cmake-version: '3.16.x'
     - name: Run cmake
+      # uses: actions/checkout@v4
       run: cmake --version
+      working-directory: ./build
